objects/Job_Posting__c.object
<CustomObject>
    <description>Represents the junction object between a position and an employment website</description>
    <fields>
        <fullName>Employment_Website__c</fullName>
        <label>Employment Website</label>
        <referenceTo>Employment_Website__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Employment Websites</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <defaultValue>&quot;firts&quot;+&quot; &quot;+&quot;-&quot;</defaultValue>
        <label>test</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Job Posting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JP-{00000}</displayFormat>
        <label>Job Posting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>